y.output
Estado 159 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 $@1: %empty

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque

    4 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables
    5                            | %empty

    6 Marca_ini_declar_variables: INICIOVARS

    7 Marca_fin_declar_variables: FINVARS PUNTOCOMA

    8 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    9                   | %empty

   10 Declar_subprog: Cabecera_subprograma bloque

   11 Cabecera_programa: PROCED MAIN ABRIRPARENT CERRARPARENT

   12 $@2: %empty

   13 Cabecera_subprograma: PROCED IDENTIFICADOR $@2 ABRIRPARENT parametros CERRARPARENT
   14                     | PROCED error_subprog

   15 error_subprog: error

   16 parametros: parametro
   17           | parametros COMA parametro
   18           | %empty

   19 parametro: tipo IDENTIFICADOR

   20 Inicio_de_bloque: ABRIRLLAVES

   21 Fin_de_bloque: CERRARLLAVES

   22 Variables_locales: Variables_locales Cuerpo_declar_variables
   23                  | Cuerpo_declar_variables

   24 Cuerpo_declar_variables: tipo Identificadores PUNTOCOMA
   25                        | error_decl_variables

   26 error_decl_variables: error

   27 Identificadores: IDENTIFICADOR
   28                | Identificadores COMA IDENTIFICADOR

   29 tipo: TIPO
   30     | tipo_lista

   31 tipo_lista: DEFLIST TIPO

   32 Sentencias: Sentencias Sentencia
   33           | Sentencia

   34 Sentencia: bloque
   35          | sentencia_asignacion
   36          | sentencia_if
   37          | sentencia_while
   38          | sentencia_entrada
   39          | sentencia_salida
   40          | llamada_proced
   41          | sentencia_for

   42 sentencia_asignacion: IDENTIFICADOR ASIG expresion PUNTOCOMA

   43 sentencia_if: CONDSI ABRIRPARENT expresion CERRARPARENT Sentencia
   44             | CONDSI ABRIRPARENT expresion CERRARPARENT Sentencia CONDSINO Sentencia

   45 sentencia_while: CONDMIENTRAS ABRIRPARENT expresion CERRARPARENT Sentencia

   46 sentencia_entrada: LEE Identificadores PUNTOCOMA

   47 sentencia_salida: ESCRIBE lista_expresiones_o_cadena PUNTOCOMA

   48 expcad: expresion
   49       | T_CADENA

   50 lista_expresiones_o_cadena: expcad
   51                           | lista_expresiones_o_cadena COMA expcad

   52 $@3: %empty

   53 llamada_proced: IDENTIFICADOR $@3 ABRIRPARENT lista_expresiones CERRARPARENT PUNTOCOMA

   54 sentencia_for: DURANTE IDENTIFICADOR DOSPUNTOSIGUAL expresion HASTA expresion HACER Sentencia

   55 expresion: ABRIRPARENT expresion CERRARPARENT
   56          | MASMENOS expresion
   57          | UNARIOSLISTA expresion
   58          | MASMAS expresion
   59          | MENOSMENOS expresion
   60          | EXCLAMACION expresion
   61          | expresion AVANRETRO
   62          | expresion ARROBA expresion
   63          | expresion MULMUL expresion
   64          | expresion MULTIDIV expresion
   65          | expresion LOGAND expresion
   66          | expresion EXOR expresion
   67          | expresion ORBIT expresion
   68          | expresion LOGOR expresion
   69          | expresion REL expresion
   70          | expresion IGUALDAD expresion
   71          | expresion PORCENTAJE expresion
   72          | expresion ANDBIT expresion
   73          | expresion MASMENOS expresion
   74          | expresion MASMAS expresion ARROBA expresion
   75          | IDENTIFICADOR
   76          | T_REAL
   77          | T_ENTERO
   78          | T_CARACTER
   79          | VERDFALS
   80          | lista
   81          | error_expresion

   82 error_expresion: error

   83 lista_expresiones: lista_expresiones COMA expresion
   84                  | expresion
   85                  | %empty

   86 lista: lista_enteros
   87      | lista_reales
   88      | lista_booleanos
   89      | lista_caracteres

   90 lista_enteros: ABRIRCORCH Enteros CERRARCORCH

   91 Enteros: T_ENTERO
   92        | Enteros COMA T_ENTERO

   93 lista_reales: ABRIRCORCH Reales CERRARCORCH

   94 Reales: T_REAL
   95       | Reales COMA T_REAL

   96 lista_booleanos: ABRIRCORCH Booleanos CERRARCORCH

   97 Booleanos: VERDFALS
   98          | Booleanos COMA VERDFALS

   99 lista_caracteres: ABRIRCORCH Caracteres CERRARCORCH

  100 Caracteres: T_CARACTER
  101           | Caracteres COMA T_CARACTER


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 15 26 82
INICIOVARS (258) 6
FINVARS (259) 7
PUNTOCOMA (260) 7 24 42 46 47 53
MAIN (261) 11
PROCED (262) 11 13 14
ABRIRCORCH (263) 90 93 96 99
CERRARCORCH (264) 90 93 96 99
ABRIRPARENT (265) 11 13 43 44 45 53 55
CERRARPARENT (266) 11 13 43 44 45 53 55
ABRIRLLAVES (267) 20
CERRARLLAVES (268) 21
DEFLIST (269) 31
ASIG (270) 42
CONDSI (271) 43 44
CONDMIENTRAS (272) 45
CONDSINO (273) 44
LEE (274) 46
ESCRIBE (275) 47
COMA (276) 17 28 51 83 92 95 98 101
MASMAS (277) 58 74
MASMENOS (278) 56 73
DURANTE (279) 54
DOSPUNTOSIGUAL (280) 54
HASTA (281) 54
HACER (282) 54
TIPO (283) 29 31
VERDFALS (284) 79 97 98
T_CARACTER (285) 78 100 101
T_CADENA (286) 49
IDENTIFICADOR (287) 13 19 27 28 42 53 54 75
T_ENTERO (288) 77 91 92
T_REAL (289) 76 94 95
ARROBA (290) 62 74
LOGOR (291) 68
LOGAND (292) 65
ORBIT (293) 67
EXOR (294) 66
ANDBIT (295) 72
IGUALDAD (296) 70
REL (297) 69
MULTIDIV (298) 64
PORCENTAJE (299) 71
UNARIOSLISTA (300) 57
EXCLAMACION (301) 60
MENOSMENOS (302) 59
MULMUL (303) 63
AVANRETRO (304) 61


No terminales con las reglas donde aparecen

$accept (50)
    en la izquierda: 0
Programa (51)
    en la izquierda: 1, en la derecha: 0
bloque (52)
    en la izquierda: 3, en la derecha: 1 10 34
$@1 (53)
    en la izquierda: 2, en la derecha: 3
Declar_de_variables_locales (54)
    en la izquierda: 4 5, en la derecha: 3
Marca_ini_declar_variables (55)
    en la izquierda: 6, en la derecha: 4
Marca_fin_declar_variables (56)
    en la izquierda: 7, en la derecha: 4
Declar_de_subprogs (57)
    en la izquierda: 8 9, en la derecha: 3 8
Declar_subprog (58)
    en la izquierda: 10, en la derecha: 8
Cabecera_programa (59)
    en la izquierda: 11, en la derecha: 1
Cabecera_subprograma (60)
    en la izquierda: 13 14, en la derecha: 10
$@2 (61)
    en la izquierda: 12, en la derecha: 13
error_subprog (62)
    en la izquierda: 15, en la derecha: 14
parametros (63)
    en la izquierda: 16 17 18, en la derecha: 13 17
parametro (64)
    en la izquierda: 19, en la derecha: 16 17
Inicio_de_bloque (65)
    en la izquierda: 20, en la derecha: 3
Fin_de_bloque (66)
    en la izquierda: 21, en la derecha: 3
Variables_locales (67)
    en la izquierda: 22 23, en la derecha: 4 22
Cuerpo_declar_variables (68)
    en la izquierda: 24 25, en la derecha: 22 23
error_decl_variables (69)
    en la izquierda: 26, en la derecha: 25
Identificadores (70)
    en la izquierda: 27 28, en la derecha: 24 28 46
tipo (71)
    en la izquierda: 29 30, en la derecha: 19 24
tipo_lista (72)
    en la izquierda: 31, en la derecha: 30
Sentencias (73)
    en la izquierda: 32 33, en la derecha: 3 32
Sentencia (74)
    en la izquierda: 34 35 36 37 38 39 40 41, en la derecha: 32 33
    43 44 45 54
sentencia_asignacion (75)
    en la izquierda: 42, en la derecha: 35
sentencia_if (76)
    en la izquierda: 43 44, en la derecha: 36
sentencia_while (77)
    en la izquierda: 45, en la derecha: 37
sentencia_entrada (78)
    en la izquierda: 46, en la derecha: 38
sentencia_salida (79)
    en la izquierda: 47, en la derecha: 39
expcad (80)
    en la izquierda: 48 49, en la derecha: 50 51
lista_expresiones_o_cadena (81)
    en la izquierda: 50 51, en la derecha: 47 51
llamada_proced (82)
    en la izquierda: 53, en la derecha: 40
$@3 (83)
    en la izquierda: 52, en la derecha: 53
sentencia_for (84)
    en la izquierda: 54, en la derecha: 41
expresion (85)
    en la izquierda: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81, en la derecha: 42 43 44 45 48
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    83 84
error_expresion (86)
    en la izquierda: 82, en la derecha: 81
lista_expresiones (87)
    en la izquierda: 83 84 85, en la derecha: 53 83
lista (88)
    en la izquierda: 86 87 88 89, en la derecha: 80
lista_enteros (89)
    en la izquierda: 90, en la derecha: 86
Enteros (90)
    en la izquierda: 91 92, en la derecha: 90 92
lista_reales (91)
    en la izquierda: 93, en la derecha: 87
Reales (92)
    en la izquierda: 94 95, en la derecha: 93 95
lista_booleanos (93)
    en la izquierda: 96, en la derecha: 88
Booleanos (94)
    en la izquierda: 97 98, en la derecha: 96 98
lista_caracteres (95)
    en la izquierda: 99, en la derecha: 89
Caracteres (96)
    en la izquierda: 100 101, en la derecha: 99 101


Estado 0

    0 $accept: . Programa $end

    PROCED  desplazar e ir al estado 1

    Programa           ir al estado 2
    Cabecera_programa  ir al estado 3


Estado 1

   11 Cabecera_programa: PROCED . MAIN ABRIRPARENT CERRARPARENT

    MAIN  desplazar e ir al estado 4


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    1 Programa: Cabecera_programa . bloque

    ABRIRLLAVES  desplazar e ir al estado 6

    bloque            ir al estado 7
    Inicio_de_bloque  ir al estado 8


Estado 4

   11 Cabecera_programa: PROCED MAIN . ABRIRPARENT CERRARPARENT

    ABRIRPARENT  desplazar e ir al estado 9


Estado 5

    0 $accept: Programa $end .

    $default  aceptar


Estado 6

   20 Inicio_de_bloque: ABRIRLLAVES .

    $default  reduce usando la regla 20 (Inicio_de_bloque)


Estado 7

    1 Programa: Cabecera_programa bloque .

    $default  reduce usando la regla 1 (Programa)


Estado 8

    3 bloque: Inicio_de_bloque . $@1 Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 10


Estado 9

   11 Cabecera_programa: PROCED MAIN ABRIRPARENT . CERRARPARENT

    CERRARPARENT  desplazar e ir al estado 11


Estado 10

    3 bloque: Inicio_de_bloque $@1 . Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque

    INICIOVARS  desplazar e ir al estado 12

    $default  reduce usando la regla 5 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 13
    Marca_ini_declar_variables   ir al estado 14


Estado 11

   11 Cabecera_programa: PROCED MAIN ABRIRPARENT CERRARPARENT .

    $default  reduce usando la regla 11 (Cabecera_programa)


Estado 12

    6 Marca_ini_declar_variables: INICIOVARS .

    $default  reduce usando la regla 6 (Marca_ini_declar_variables)


Estado 13

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales . Declar_de_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 9 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 15


Estado 14

    4 Declar_de_variables_locales: Marca_ini_declar_variables . Variables_locales Marca_fin_declar_variables

    error    desplazar e ir al estado 16
    DEFLIST  desplazar e ir al estado 17
    TIPO     desplazar e ir al estado 18

    Variables_locales        ir al estado 19
    Cuerpo_declar_variables  ir al estado 20
    error_decl_variables     ir al estado 21
    tipo                     ir al estado 22
    tipo_lista               ir al estado 23


Estado 15

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales Declar_de_subprogs . Sentencias Fin_de_bloque
    8 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    PROCED         desplazar e ir al estado 24
    ABRIRLLAVES    desplazar e ir al estado 6
    CONDSI         desplazar e ir al estado 25
    CONDMIENTRAS   desplazar e ir al estado 26
    LEE            desplazar e ir al estado 27
    ESCRIBE        desplazar e ir al estado 28
    DURANTE        desplazar e ir al estado 29
    IDENTIFICADOR  desplazar e ir al estado 30

    bloque                ir al estado 31
    Declar_subprog        ir al estado 32
    Cabecera_subprograma  ir al estado 33
    Inicio_de_bloque      ir al estado 8
    Sentencias            ir al estado 34
    Sentencia             ir al estado 35
    sentencia_asignacion  ir al estado 36
    sentencia_if          ir al estado 37
    sentencia_while       ir al estado 38
    sentencia_entrada     ir al estado 39
    sentencia_salida      ir al estado 40
    llamada_proced        ir al estado 41
    sentencia_for         ir al estado 42


Estado 16

   26 error_decl_variables: error .

    $default  reduce usando la regla 26 (error_decl_variables)


Estado 17

   31 tipo_lista: DEFLIST . TIPO

    TIPO  desplazar e ir al estado 43


Estado 18

   29 tipo: TIPO .

    $default  reduce usando la regla 29 (tipo)


Estado 19

    4 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales . Marca_fin_declar_variables
   22 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error    desplazar e ir al estado 16
    FINVARS  desplazar e ir al estado 44
    DEFLIST  desplazar e ir al estado 17
    TIPO     desplazar e ir al estado 18

    Marca_fin_declar_variables  ir al estado 45
    Cuerpo_declar_variables     ir al estado 46
    error_decl_variables        ir al estado 21
    tipo                        ir al estado 22
    tipo_lista                  ir al estado 23


Estado 20

   23 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 23 (Variables_locales)


Estado 21

   25 Cuerpo_declar_variables: error_decl_variables .

    $default  reduce usando la regla 25 (Cuerpo_declar_variables)


Estado 22

   24 Cuerpo_declar_variables: tipo . Identificadores PUNTOCOMA

    IDENTIFICADOR  desplazar e ir al estado 47

    Identificadores  ir al estado 48


Estado 23

   30 tipo: tipo_lista .

    $default  reduce usando la regla 30 (tipo)


Estado 24

   13 Cabecera_subprograma: PROCED . IDENTIFICADOR $@2 ABRIRPARENT parametros CERRARPARENT
   14                     | PROCED . error_subprog

    error          desplazar e ir al estado 49
    IDENTIFICADOR  desplazar e ir al estado 50

    error_subprog  ir al estado 51


Estado 25

   43 sentencia_if: CONDSI . ABRIRPARENT expresion CERRARPARENT Sentencia
   44             | CONDSI . ABRIRPARENT expresion CERRARPARENT Sentencia CONDSINO Sentencia

    ABRIRPARENT  desplazar e ir al estado 52


Estado 26

   45 sentencia_while: CONDMIENTRAS . ABRIRPARENT expresion CERRARPARENT Sentencia

    ABRIRPARENT  desplazar e ir al estado 53


Estado 27

   46 sentencia_entrada: LEE . Identificadores PUNTOCOMA

    IDENTIFICADOR  desplazar e ir al estado 47

    Identificadores  ir al estado 54


Estado 28

   47 sentencia_salida: ESCRIBE . lista_expresiones_o_cadena PUNTOCOMA

    error          desplazar e ir al estado 55
    ABRIRCORCH     desplazar e ir al estado 56
    ABRIRPARENT    desplazar e ir al estado 57
    MASMAS         desplazar e ir al estado 58
    MASMENOS       desplazar e ir al estado 59
    VERDFALS       desplazar e ir al estado 60
    T_CARACTER     desplazar e ir al estado 61
    T_CADENA       desplazar e ir al estado 62
    IDENTIFICADOR  desplazar e ir al estado 63
    T_ENTERO       desplazar e ir al estado 64
    T_REAL         desplazar e ir al estado 65
    UNARIOSLISTA   desplazar e ir al estado 66
    EXCLAMACION    desplazar e ir al estado 67
    MENOSMENOS     desplazar e ir al estado 68

    expcad                      ir al estado 69
    lista_expresiones_o_cadena  ir al estado 70
    expresion                   ir al estado 71
    error_expresion             ir al estado 72
    lista                       ir al estado 73
    lista_enteros               ir al estado 74
    lista_reales                ir al estado 75
    lista_booleanos             ir al estado 76
    lista_caracteres            ir al estado 77


Estado 29

   54 sentencia_for: DURANTE . IDENTIFICADOR DOSPUNTOSIGUAL expresion HASTA expresion HACER Sentencia

    IDENTIFICADOR  desplazar e ir al estado 78


Estado 30

   42 sentencia_asignacion: IDENTIFICADOR . ASIG expresion PUNTOCOMA
   53 llamada_proced: IDENTIFICADOR . $@3 ABRIRPARENT lista_expresiones CERRARPARENT PUNTOCOMA

    ASIG  desplazar e ir al estado 79

    $default  reduce usando la regla 52 ($@3)

    $@3  ir al estado 80


Estado 31

   34 Sentencia: bloque .

    $default  reduce usando la regla 34 (Sentencia)


Estado 32

    8 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce usando la regla 8 (Declar_de_subprogs)


Estado 33

   10 Declar_subprog: Cabecera_subprograma . bloque

    ABRIRLLAVES  desplazar e ir al estado 6

    bloque            ir al estado 81
    Inicio_de_bloque  ir al estado 8


Estado 34

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales Declar_de_subprogs Sentencias . Fin_de_bloque
   32 Sentencias: Sentencias . Sentencia

    ABRIRLLAVES    desplazar e ir al estado 6
    CERRARLLAVES   desplazar e ir al estado 82
    CONDSI         desplazar e ir al estado 25
    CONDMIENTRAS   desplazar e ir al estado 26
    LEE            desplazar e ir al estado 27
    ESCRIBE        desplazar e ir al estado 28
    DURANTE        desplazar e ir al estado 29
    IDENTIFICADOR  desplazar e ir al estado 30

    bloque                ir al estado 31
    Inicio_de_bloque      ir al estado 8
    Fin_de_bloque         ir al estado 83
    Sentencia             ir al estado 84
    sentencia_asignacion  ir al estado 36
    sentencia_if          ir al estado 37
    sentencia_while       ir al estado 38
    sentencia_entrada     ir al estado 39
    sentencia_salida      ir al estado 40
    llamada_proced        ir al estado 41
    sentencia_for         ir al estado 42


Estado 35

   33 Sentencias: Sentencia .

    $default  reduce usando la regla 33 (Sentencias)


Estado 36

   35 Sentencia: sentencia_asignacion .

    $default  reduce usando la regla 35 (Sentencia)


Estado 37

   36 Sentencia: sentencia_if .

    $default  reduce usando la regla 36 (Sentencia)


Estado 38

   37 Sentencia: sentencia_while .

    $default  reduce usando la regla 37 (Sentencia)


Estado 39

   38 Sentencia: sentencia_entrada .

    $default  reduce usando la regla 38 (Sentencia)


Estado 40

   39 Sentencia: sentencia_salida .

    $default  reduce usando la regla 39 (Sentencia)


Estado 41

   40 Sentencia: llamada_proced .

    $default  reduce usando la regla 40 (Sentencia)


Estado 42

   41 Sentencia: sentencia_for .

    $default  reduce usando la regla 41 (Sentencia)


Estado 43

   31 tipo_lista: DEFLIST TIPO .

    $default  reduce usando la regla 31 (tipo_lista)


Estado 44

    7 Marca_fin_declar_variables: FINVARS . PUNTOCOMA

    PUNTOCOMA  desplazar e ir al estado 85


Estado 45

    4 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables .

    $default  reduce usando la regla 4 (Declar_de_variables_locales)


Estado 46

   22 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 22 (Variables_locales)


Estado 47

   27 Identificadores: IDENTIFICADOR .

    $default  reduce usando la regla 27 (Identificadores)


Estado 48

   24 Cuerpo_declar_variables: tipo Identificadores . PUNTOCOMA
   28 Identificadores: Identificadores . COMA IDENTIFICADOR

    PUNTOCOMA  desplazar e ir al estado 86
    COMA       desplazar e ir al estado 87


Estado 49

   15 error_subprog: error .

    $default  reduce usando la regla 15 (error_subprog)


Estado 50

   13 Cabecera_subprograma: PROCED IDENTIFICADOR . $@2 ABRIRPARENT parametros CERRARPARENT

    $default  reduce usando la regla 12 ($@2)

    $@2  ir al estado 88


Estado 51

   14 Cabecera_subprograma: PROCED error_subprog .

    $default  reduce usando la regla 14 (Cabecera_subprograma)


Estado 52

   43 sentencia_if: CONDSI ABRIRPARENT . expresion CERRARPARENT Sentencia
   44             | CONDSI ABRIRPARENT . expresion CERRARPARENT Sentencia CONDSINO Sentencia

    error          desplazar e ir al estado 55
    ABRIRCORCH     desplazar e ir al estado 56
    ABRIRPARENT    desplazar e ir al estado 57
    MASMAS         desplazar e ir al estado 58
    MASMENOS       desplazar e ir al estado 59
    VERDFALS       desplazar e ir al estado 60
    T_CARACTER     desplazar e ir al estado 61
    IDENTIFICADOR  desplazar e ir al estado 63
    T_ENTERO       desplazar e ir al estado 64
    T_REAL         desplazar e ir al estado 65
    UNARIOSLISTA   desplazar e ir al estado 66
    EXCLAMACION    desplazar e ir al estado 67
    MENOSMENOS     desplazar e ir al estado 68

    expresion         ir al estado 89
    error_expresion   ir al estado 72
    lista             ir al estado 73
    lista_enteros     ir al estado 74
    lista_reales      ir al estado 75
    lista_booleanos   ir al estado 76
    lista_caracteres  ir al estado 77


Estado 53

   45 sentencia_while: CONDMIENTRAS ABRIRPARENT . expresion CERRARPARENT Sentencia

    error          desplazar e ir al estado 55
    ABRIRCORCH     desplazar e ir al estado 56
    ABRIRPARENT    desplazar e ir al estado 57
    MASMAS         desplazar e ir al estado 58
    MASMENOS       desplazar e ir al estado 59
    VERDFALS       desplazar e ir al estado 60
    T_CARACTER     desplazar e ir al estado 61
    IDENTIFICADOR  desplazar e ir al estado 63
    T_ENTERO       desplazar e ir al estado 64
    T_REAL         desplazar e ir al estado 65
    UNARIOSLISTA   desplazar e ir al estado 66
    EXCLAMACION    desplazar e ir al estado 67
    MENOSMENOS     desplazar e ir al estado 68

    expresion         ir al estado 90
    error_expresion   ir al estado 72
    lista             ir al estado 73
    lista_enteros     ir al estado 74
    lista_reales      ir al estado 75
    lista_booleanos   ir al estado 76
    lista_caracteres  ir al estado 77


Estado 54

   28 Identificadores: Identificadores . COMA IDENTIFICADOR
   46 sentencia_entrada: LEE Identificadores . PUNTOCOMA

    PUNTOCOMA  desplazar e ir al estado 91
    COMA       desplazar e ir al estado 87


Estado 55

   82 error_expresion: error .

    $default  reduce usando la regla 82 (error_expresion)


Estado 56

   90 lista_enteros: ABRIRCORCH . Enteros CERRARCORCH
   93 lista_reales: ABRIRCORCH . Reales CERRARCORCH
   96 lista_booleanos: ABRIRCORCH . Booleanos CERRARCORCH
   99 lista_caracteres: ABRIRCORCH . Caracteres CERRARCORCH

    VERDFALS    desplazar e ir al estado 92
    T_CARACTER  desplazar e ir al estado 93
    T_ENTERO    desplazar e ir al estado 94
    T_REAL      desplazar e ir al estado 95

    Enteros     ir al estado 96
    Reales      ir al estado 97
    Booleanos   ir al estado 98
    Caracteres  ir al estado 99


Estado 57

   55 expresion: ABRIRPARENT . expresion CERRARPARENT

    error          desplazar e ir al estado 55
    ABRIRCORCH     desplazar e ir al estado 56
    ABRIRPARENT    desplazar e ir al estado 57
    MASMAS         desplazar e ir al estado 58
    MASMENOS       desplazar e ir al estado 59
    VERDFALS       desplazar e ir al estado 60
    T_CARACTER     desplazar e ir al estado 61
    IDENTIFICADOR  desplazar e ir al estado 63
    T_ENTERO       desplazar e ir al estado 64
    T_REAL         desplazar e ir al estado 65
    UNARIOSLISTA   desplazar e ir al estado 66
    EXCLAMACION    desplazar e ir al estado 67
    MENOSMENOS     desplazar e ir al estado 68

    expresion         ir al estado 100
    error_expresion   ir al estado 72
    lista             ir al estado 73
    lista_enteros     ir al estado 74
    lista_reales      ir al estado 75
    lista_booleanos   ir al estado 76
    lista_caracteres  ir al estado 77


Estado 58

   58 expresion: MASMAS . expresion
